--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Consera</title>
 </head>
 <body>
-<h1>Hello Consera</h1>
+<h1>Hello Consera! It is a great course</h1>
 </body>
 </html>
